--- a/Components/Layout/NavMenu.razor
+++ b/Components/Layout/NavMenu.razor
@@ -1,7 +1,10 @@
-﻿<div class="top-row ps-3 navbar navbar-dark">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="">FlashCardBlazor</a>
-    </div>
+﻿<div class="top-row ps-3 navbar " style="height: 100px;">
+    <a href="/" class="text-decoration-none">
+        <div class="container-fluid d-flex justify-content-center align-items-center">
+            <img src="/favicon.jpg" style="width: 80px; height: 55px; object-fit: cover;border-radius: 25%;" />
+            <p class="text-center text-white mb-0 ms-3 fw-bold">Flash Card</p>
+        </div>
+    </a>
 </div>
 
 <input type="checkbox" title="Navigation menu" class="navbar-toggler" />
@@ -15,14 +18,14 @@
         </div>
 
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Counter
+            <NavLink class="nav-link" href="add">
+                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Add Flashcard
             </NavLink>
         </div>
 
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="weather">
-                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Weather
+            <NavLink class="nav-link" href="flashcard">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Study
             </NavLink>
         </div>
     </nav>
