--- a/Components/_Imports.razor
+++ b/Components/_Imports.razor
@@ -8,3 +8,5 @@
 @using Microsoft.JSInterop
 @using FlashCardBlazor
 @using FlashCardBlazor.Components
+@using Dapper
+@using Microsoft.Data.SqlClient
