--- a/Components/Pages/Home.razor
+++ b/Components/Pages/Home.razor
@@ -1,7 +1,40 @@
 ﻿@page "/"
+@using FlashCardBlazor.Data
+@inject FlashcardService flashcardService
+@inject NavigationManager navigationManager
 
 <PageTitle>Home</PageTitle>
+@if(flashcards.Count == 0){
+    <h2 class="fw-bold">No flashcard found.</h2>
+    <a href="/add">Do you want to add new flashcard?</a>
+}
+else
+{
+    <ul class="list-unstyled">
+        @foreach (var flashcard in flashcards)
+        {
+            <li class="border p-3 mb-2 d-flex justify-content-between align-items-center">
+                <div>
+                    <p class="m-0"><strong>Question:</strong> @flashcard.Question</p>
+                    <p class="m-0"><strong>Answer:</strong> @flashcard.Answer</p>
+                </div>
+                <div>
+                    <a class="btn btn-sm btn-outline-warning" href="/edit/@flashcard.Id">
+                        <i class="bi bi-pencil"></i> Edit
+                    </a>
+                    <a class="btn btn-sm btn-outline-danger ms-2" href="/delete/@flashcard.Id">
+                        <i class="bi bi-trash"></i> Delete
+                    </a>
+                </div>
+            </li>
+        }
+    </ul>
+}
+@code{
+    private List<FlashcardModel> flashcards = new();
 
-<h1>Hello, world!</h1>
-
-Welcome to your new app.
+    protected override async Task OnInitializedAsync()
+    {
+        flashcards = await flashcardService.GetAllFlashCard();
+    }
+}
